fixed contact form layout issues w/css

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -911,29 +911,27 @@ h4 {
     color: $lightAccent;
 }
 
-.form-wrapper {
-    width: 70%;
-    margin: 0 auto;
-}
-
 .contact-form {
     width: 100%;
-    margin: 0 auto;
     .form-row {
-        width: 900px;
+        width: calc(35vw + 360px);
+        margin: 0 auto;
     }
     label {
         text-transform: uppercase;
         text-align: right;
         color: $lightAccent;
-        font-size: 1.3rem;
+        font-family: 'Lato', sans-serif;
+        font-weight: 400;
+        font-size: 1.5rem;
+        letter-spacing: 1.4px;
         padding-top: 7px;
         padding-right: 20px;
         display: inline-block;
-        width: 25%;
+        width: 190px;
     }
     .input-field {
-        width: 550px;
+        width: 35vw;
         height: 30px;
         border-radius: 10px;
         padding: 10px;
@@ -944,7 +942,7 @@ h4 {
         background-color: white;
     }
     .message-field {
-        width: 550px;
+        width: 35vw;
         height: 300px;
         border-radius: 10px;
         padding: 10px;
@@ -993,28 +991,24 @@ h4 {
         font-size: 2.5rem;
     }
     
-    .form-wrapper {
-        width: 90%;
-        margin: 0 auto;
-    }
-    
     .contact-form {
         width: 100%;
-        margin: 0 auto;
         .form-row {
-            width: 90%;
+            width: 80vw;
         }
         label {
             text-align: left;
             font-size: 1.2rem;
-            margin-left: 10px;
+            margin-left: 0px;
         }
         .input-field {
-            width: 90%;
+            width: 80vw;
+            margin-left: 0;
             font-size: 1.2rem;
         }
         .message-field {
-            width: 90%;
+            width: 80vw;
+            margin-left: 0;
             font-size: 1.2rem;
         }
         .text-danger {
